@@ -109,10 +109,10 @@ package TestCase {
     my $value_int2 = ++$value_int;
     my $value_long2 = ++$value_long;
     
-    if ((int)$value_byte == (int)(byte)1) {
-      if ((int)$value_byte2 == (int)(byte)1) {
-        if ((int)$value_short == (int)(short)1) {
-          if ((int)$value_short2 == (int)(short)1) {
+    if ($value_byte == 1) {
+      if ($value_byte2 == 1) {
+        if ($value_short == 1) {
+          if ($value_short2 == 1) {
             if ($value_int == 1) {
               if ($value_int2 == 1) {
                 if ($value_long == 1L) {
@@ -139,10 +139,10 @@ package TestCase {
     my $value_int2 = $value_int++;
     my $value_long2 = $value_long++;
     
-    if ((int)$value_byte == (int)(byte)1) {
-      if ((int)$value_byte2 == (int)(byte)0) {
-        if ((int)$value_short == (int)(short)1) {
-          if ((int)$value_short2 == (int)(short)0) {
+    if ($value_byte == 1) {
+      if ($value_byte2 == 0) {
+        if ($value_short == 1) {
+          if ($value_short2 == 0) {
             if ($value_int == 1) {
               if ($value_int2 == 0) {
                 if ($value_long == 1L) {
@@ -169,10 +169,10 @@ package TestCase {
     my $value_int2 = --$value_int;
     my $value_long2 = --$value_long;
     
-    if ((int)$value_byte == (int)(byte)-(int)(byte)1) {
-      if ((int)$value_byte2 == (int)(byte)-(int)(byte)1) {
-        if ((int)$value_short == (int)(short)-(int)(short)1) {
-          if ((int)$value_short2 == (int)(short)-(int)(short)1) {
+    if ($value_byte == -1) {
+      if ($value_byte2 == -1) {
+        if ($value_short == -1) {
+          if ($value_short2 == -1) {
             if ($value_int == -1) {
               if ($value_int2 == -1) {
                 if ($value_long == -1L) {
@@ -199,10 +199,10 @@ package TestCase {
     my $value_int2 = $value_int--;
     my $value_long2 = $value_long--;
     
-    if ((int)$value_byte == (int)(byte)-(int)(byte)1) {
-      if ((int)$value_byte2 == (int)(byte)0) {
-        if ((int)$value_short == (int)(short)-(int)(short)1) {
-          if ((int)$value_short2 == (int)(short)0) {
+    if ($value_byte == -1) {
+      if ($value_byte2 == 0) {
+        if ($value_short == -1) {
+          if ($value_short2 == 0) {
             if ($value_int == -1) {
               if ($value_int2 == 0) {
                 if ($value_long == -1L) {
@@ -468,8 +468,8 @@ package TestCase {
   # SPVM set and get
   sub spvm_set_and_get_byte : int ($nums : byte[]) {
     
-    if ((int)$nums->[0] == (int)(byte)0) {
-      if ((int)$nums->[1] == (int)Byte::MAX_VALUE()) {
+    if ($nums->[0] == 0) {
+      if ($nums->[1] == Byte::MAX_VALUE()) {
         return 1;
       }
     }
@@ -478,8 +478,8 @@ package TestCase {
   }
   sub spvm_set_and_get_short : int ($nums : short[]) {
     
-    if ((int)$nums->[0] == (int)(short)0) {
-      if ((int)$nums->[1] == (int)Short::MAX_VALUE()) {
+    if ($nums->[0] == 0) {
+      if ($nums->[1] == Short::MAX_VALUE()) {
         return 1;
       }
     }
@@ -1005,12 +1005,12 @@ package TestCase {
 
   sub spvm_new_object_array_len_element_byte_array : int ($nums : byte[][]) {
     
-    if ((int)$nums->[0][0] == (int)(byte)1) {
-      if ((int)$nums->[0][1] == (int)(byte)2) {
-        if ((int)$nums->[0][2] == (int)(byte)3) {
-          if ((int)$nums->[1][0] == (int)(byte)4) {
-            if ((int)$nums->[1][1] == (int)(byte)5) {
-              if ((int)$nums->[1][2] == (int)(byte)6) {
+    if ($nums->[0][0] == 1) {
+      if ($nums->[0][1] == 2) {
+        if ($nums->[0][2] == 3) {
+          if ($nums->[1][0] == 4) {
+            if ($nums->[1][1] == 5) {
+              if ($nums->[1][2] == 6) {
                 return 1;
               }
             }
@@ -1143,10 +1143,10 @@ package TestCase {
   }
   
   sub divide : int () {
-    my $num1 = (byte)((int)(byte)8 / (int)(byte)4);
-    my $num2 = (byte)((int)(byte)8 / (int)(byte)3);
-    my $num3 = (short)((int)(short)8 / (int)(short)4);
-    my $num4 = (short)((int)(short)8 / (int)(short)3);
+    my $num1 = (byte)((byte)8 / (byte)4);
+    my $num2 = (byte)((byte)8 / (byte)3);
+    my $num3 = (short)((short)8 / (short)4);
+    my $num4 = (short)((short)8 / (short)3);
     my $num5 = 8 / 4;
     my $num6 = 8 / 3;
     my $num7 = 8L / 4L;
@@ -1154,10 +1154,10 @@ package TestCase {
     my $num9 = 1.0f / 2.0f;
     my $num10 = 1.0 / 2.0;
     
-    if ((int)$num1 == (int)(byte)2) {
-      if ((int)$num2 == (int)(byte)2) {
-        if ((int)$num3 == (int)(short)2) {
-          if ((int)$num4 == (int)(short)2) {
+    if ($num1 == 2) {
+      if ($num2 == 2) {
+        if ($num3 == 2) {
+          if ($num4 == 2) {
             if ($num5 == 2) {
               if ($num6 == 2) {
                 if ($num7 == 2L) {
@@ -1180,8 +1180,8 @@ package TestCase {
   }
 
   sub remainder : int () {
-    my $num1 = (byte)((int)(byte)5 % (int)(byte)3);
-    my $num2 = (byte)((int)(byte)-3 % (int)(byte)5);
+    my $num1 = (byte)((byte)5 % (byte)3);
+    my $num2 = (byte)((byte)-3 % (byte)5);
     my $num3 = (short)((int)(short)5 % (int)(short)3);
     my $num4 = (short)((int)(short)-3 % (int)(short)5);
     my $num5 = 5 % 3;
@@ -1189,10 +1189,10 @@ package TestCase {
     my $num7 = 5L % 3L;
     my $num8 = -3L % 5L;
     
-    if ((int)$num1 == (int)(byte)2) {
-      if ((int)$num2 == (int)(byte)-3) {
-        if ((int)$num3 == (int)(short)2) {
-          if ((int)$num4 == (int)(short)-3) {
+    if ($num1 == 2) {
+      if ($num2 == -3) {
+        if ($num3 == 2) {
+          if ($num4 == -3) {
             if ($num5 == 2) {
               if ($num6 == -3) {
                 if ($num7 == 2L) {
@@ -1213,8 +1213,8 @@ package TestCase {
   # Default return value empty
   sub default_return_value_byte : int () {
     
-    if ((int)TestCase::default_return_value_byte_sub() == (int)(byte)0) {
-      if ((int)TestCase::default_return_value_byte_sub_empty() == (int)(byte)0) {
+    if (TestCase::default_return_value_byte_sub() == 0) {
+      if (TestCase::default_return_value_byte_sub_empty() == 0) {
         return 1;
       }
     }
@@ -1574,7 +1574,7 @@ package TestCase {
   # Object field is initialized zero
   sub object_field_initialized_zero : int () {
     my $obj = new TestCase;
-    if ((int)$obj->{x_byte} == (int)(byte)0) {
+    if ($obj->{x_byte} == 0) {
       if ($obj->{x_int} == 0) {
         if ($obj->{x_string} == undef) {
           return 1;
@@ -1670,10 +1670,10 @@ package TestCase {
     my $values_float = new float[1000000];
     my $values_double = new double[1000000];
     my $values_object = new TestCase[1000000];
-    if ((int)$values_byte->[0] == (int)(byte)0) {
-      if ((int)$values_byte->[999999] == (int)(byte)0) {
-        if ((int)$values_short->[0] == (int)(short)0) {
-          if ((int)$values_short->[999999] == (int)(short)0) {
+    if ($values_byte->[0] == 0) {
+      if ($values_byte->[999999] == 0) {
+        if ($values_short->[0] == 0) {
+          if ($values_short->[999999] == 0) {
             if ($values_int->[0] == 0) {
               if ($values_int->[999999] == 0) {
                 if ($values_long->[0] == 0L) {
@@ -1707,10 +1707,10 @@ package TestCase {
     my $values_float = new float[10];
     my $values_double = new double[10];
     my $values_object = new TestCase[10];
-    if ((int)$values_byte->[0] == (int)(byte)0) {
-      if ((int)$values_byte->[9] == (int)(byte)0) {
-        if ((int)$values_short->[0] == (int)(short)0) {
-          if ((int)$values_short->[9] == (int)(short)0) {
+    if ($values_byte->[0] == 0) {
+      if ($values_byte->[9] == 0) {
+        if ($values_short->[0] == 0) {
+          if ($values_short->[9] == 0) {
             if ($values_int->[0] == 0) {
               if ($values_int->[9] == 0) {
                 if ($values_long->[0] == 0L) {
@@ -1739,9 +1739,9 @@ package TestCase {
   sub array_init_byte : int () {
     my $nums = new byte[] {(byte)1, (byte)2, Byte::MAX_VALUE()};
     
-    if ((int)$nums->[0] == (int)(byte)1) {
-      if ((int)$nums->[1] == (int)(byte)2) {
-        if ((int)$nums->[2] == (int)Byte::MAX_VALUE()) {
+    if ($nums->[0] == 1) {
+      if ($nums->[1] == 2) {
+        if ($nums->[2] == Byte::MAX_VALUE()) {
           return 1;
         }
       }
@@ -1862,7 +1862,7 @@ package TestCase {
   sub convert_float_to_byte : int () {
     my $value = (byte)127.1f;
     
-    if ((int)$value == (int)(byte)127) {
+    if ($value == 127) {
       return 1;
     }
     
@@ -1871,7 +1871,7 @@ package TestCase {
   sub convert_float_to_short : int () {
     my $value = (short)32767.1f;
     
-    if ((int)$value == (int)(short)32767) {
+    if ($value == 32767) {
       return 1;
     }
     
@@ -1898,7 +1898,7 @@ package TestCase {
   sub convert_double_to_byte : int () {
     my $value = (byte)127.1;
     
-    if ((int)$value == (int)(byte)127) {
+    if ($value == 127) {
       return 1;
     }
     
@@ -2164,7 +2164,7 @@ package TestCase {
   sub convert_byte_to_byte : int () {
     my $value = (byte)(byte)0xFF;
     
-    if ((int)$value == (int)(byte)0xFF) {
+    if ($value == (byte)0xFF) {
       return 1;
     }
     
@@ -2255,9 +2255,9 @@ package TestCase {
       if ($nums->[0] == 2147483647) {
         if ($nums->[1] == 2147483647) {
           # abc
-          if ((int)$values->[0] == (int)(byte)97) {
-            if ((int)$values->[1] == (int)(byte)98) {
-              if ((int)$values->[2] == (int)(byte)99) {
+          if ($values->[0] == 97) {
+            if ($values->[1] == 98) {
+              if ($values->[2] == 99) {
                 if (@$values == 3) {
                   return 1;
                 }
@@ -2272,8 +2272,8 @@ package TestCase {
   }
 
   sub spvm_object_set : int ($obj : TestCase) {
-    if ((int)$obj->{x_byte} == (int)(byte)127) {
-      if ((int)$obj->{x_short} == (int)(short)32767) {
+    if ($obj->{x_byte} == 127) {
+      if ($obj->{x_short} == 32767) {
         if ($obj->{x_int} == 2147483647) {
           if ($obj->{x_long} == 9223372036854775807L) {
             if ($obj->{x_float} == TestCase::FLOAT_PRECICE()) {
@@ -2384,9 +2384,9 @@ package TestCase {
   }
   sub call_sub_return_byte_array_check : int ($nums : byte[]) {
     
-    if ((int)$nums->[0] == (int)(byte)1) {
-      if ((int)$nums->[1] == (int)(byte)2) {
-        if ((int)$nums->[2] == (int)(byte)3) {
+    if ($nums->[0] == 1) {
+      if ($nums->[1] == 2) {
+        if ($nums->[2] == 3) {
           if (@$nums == 3) {
             return 1;
           }
@@ -2832,9 +2832,9 @@ package TestCase {
 
   sub spvm_new_byte_array_data : int ($values : byte[]) {
     
-    if ((int)$values->[0] == (int)(byte)97) {
-      if ((int)$values->[1] == (int)(byte)98) {
-        if ((int)$values->[2] == (int)(byte)99) {
+    if ($values->[0] == 97) {
+      if ($values->[1] == 98) {
+        if ($values->[2] == 99) {
            if (@$values == 3) {
              return 1;
            }
@@ -2847,9 +2847,9 @@ package TestCase {
 
   sub spvm_new_byte_array_data_pack : int ($values : byte[]) {
     
-    if ((int)$values->[0] == (int)(byte)97) {
-      if ((int)$values->[1] == (int)(byte)98) {
-        if ((int)$values->[2] == (int)(byte)Byte::MAX_VALUE()) {
+    if ($values->[0] == 97) {
+      if ($values->[1] == 98) {
+        if ($values->[2] == Byte::MAX_VALUE()) {
            if (@$values == 3) {
              return 1;
            }
@@ -3212,9 +3212,9 @@ package TestCase {
   
   # call_sub arguments
   sub call_sub_args_byte : int ($var1 : byte, $var2 : byte, $var3 : byte) {
-    if ((int)$var1 == (int)(byte)0) {
-      if ((int)$var2 == (int)(byte)127) {
-        if ((int)$var3 == (int)(byte)-128) {
+    if ($var1 == 0) {
+      if ($var2 == 127) {
+        if ($var3 == -128) {
           return 1;
         }
       }
@@ -3447,7 +3447,7 @@ package TestCase {
 
   sub if_eq_byte_same  : int () {
     
-    if ((int)(byte)3 == (int)(byte)3) {
+    if ((byte)3 == (byte)3) {
       return 1;
     }
     else {
@@ -3457,7 +3457,7 @@ package TestCase {
   
   sub if_eq_byte_different  : int () {
     
-    if ((int)(byte)3 == (int)(byte)2) {
+    if ((byte)3 == (byte)2) {
       return 0;
     }
     else {
@@ -3467,7 +3467,7 @@ package TestCase {
   
   sub if_eq_short_same  : int () {
     
-    if ((int)(short)3 == (int)(short)3) {
+    if ((short)3 == (short)3) {
       return 1;
     }
     else {
@@ -3477,7 +3477,7 @@ package TestCase {
   
   sub if_eq_short_different  : int () {
     
-    if ((int)(short)3 == (int)(short)2) {
+    if ((short)3 == (short)2) {
       return 0;
     }
     else {
@@ -3487,7 +3487,7 @@ package TestCase {
   
   sub if_eq_int_same  : int () {
     
-    if ((int)3 == (int)3) {
+    if (3 == 3) {
       return 1;
     }
     else {
@@ -3497,7 +3497,7 @@ package TestCase {
   
   sub if_eq_int_different  : int () {
     
-    if ((int)3 == (int)2) {
+    if (3 == 2) {
       return 0;
     }
     else {
@@ -3608,7 +3608,7 @@ package TestCase {
   }
   sub if_ne_byte_same  : int () {
     
-    if ((int)(byte)3 != (int)(byte)3) {
+    if ((byte)3 != (byte)3) {
       return 0;
     }
     else {
@@ -3618,7 +3618,7 @@ package TestCase {
   
   sub if_ne_byte_different  : int () {
     
-    if ((int)(byte)3 != (int)(byte)2) {
+    if ((byte)3 != (byte)2) {
       return 1;
     }
     else {
@@ -3753,7 +3753,7 @@ package TestCase {
   # If a > b
   sub if_gt_byte_left_big  : int () {
     
-    if ((int)(byte)3 > (int)(byte)1) {
+    if ((byte)3 > (byte)1) {
       return 1;
     }
     else {
@@ -3763,7 +3763,7 @@ package TestCase {
 
   sub if_gt_byte_same  : int () {
     
-    if ((int)(byte)3 > (int)(byte)3) {
+    if ((byte)3 > (byte)3) {
       return 0;
     }
     else {
@@ -3773,7 +3773,7 @@ package TestCase {
 
   sub if_gt_byte_right_big  : int () {
     
-    if ((int)(byte)3 > (int)(byte)4) {
+    if ((byte)3 > (byte)4) {
       return 0;
     }
     else {
@@ -3934,7 +3934,7 @@ package TestCase {
   # If a >= b
   sub if_ge_byte_left_big  : int () {
     
-    if ((int)(byte)3 >= (int)(byte)1) {
+    if ((byte)3 >= (byte)1) {
       return 1;
     }
     else {
@@ -3944,7 +3944,7 @@ package TestCase {
 
   sub if_ge_byte_same  : int () {
     
-    if ((int)(byte)3 >= (int)(byte)3) {
+    if ((byte)3 >= (byte)3) {
       return 1;
     }
     else {
@@ -3954,7 +3954,7 @@ package TestCase {
 
   sub if_ge_byte_right_big  : int () {
     
-    if ((int)(byte)3 >= (int)(byte)4) {
+    if ((byte)3 >= (byte)4) {
       return 0;
     }
     else {
@@ -4115,7 +4115,7 @@ package TestCase {
   # If a < b
   sub if_lt_byte_left_big  : int () {
     
-    if ((int)(byte)3 < (int)(byte)1) {
+    if ((byte)3 < (byte)1) {
       return 0;
     }
     else {
@@ -4125,7 +4125,7 @@ package TestCase {
 
   sub if_lt_byte_same  : int () {
     
-    if ((int)(byte)3 < (int)(byte)3) {
+    if ((byte)3 < (byte)3) {
       return 0;
     }
     else {
@@ -4135,7 +4135,7 @@ package TestCase {
 
   sub if_lt_byte_right_big  : int () {
     
-    if ((int)(byte)3 < (int)(byte)4) {
+    if ((byte)3 < (byte)4) {
       return 1;
     }
     else {
@@ -4296,7 +4296,7 @@ package TestCase {
   # If a <= b
   sub if_le_byte_left_big  : int () {
     
-    if ((int)(byte)3 <= (int)(byte)1) {
+    if ((byte)3 <= (byte)1) {
       return 0;
     }
     else {
@@ -4306,7 +4306,7 @@ package TestCase {
 
   sub if_le_byte_same  : int () {
     
-    if ((int)(byte)3 <= (int)(byte)3) {
+    if ((byte)3 <= (byte)3) {
       return 1;
     }
     else {
@@ -4316,7 +4316,7 @@ package TestCase {
 
   sub if_le_byte_right_big  : int () {
     
-    if ((int)(byte)3 <= (int)(byte)4) {
+    if ((byte)3 <= (byte)4) {
       return 1;
     }
     else {
@@ -4580,10 +4580,10 @@ package TestCase {
     if ($value1 == (float)255) {
       if ($value2 == (double)255) {
         if ($value3 == (long)255) {
-          if ((int)$value4 == (int)(byte)-1) {
-            if ((int)$value5 == (int)(short)-1) {
-              if ((int)$value6 == (int)(byte)127) {
-                if ((int)$value7 == (int)(short)32767) {
+          if ($value4 == -1) {
+            if ($value5 == -1) {
+              if ($value6 == 127) {
+                if ($value7 == 32767) {
                   return 1;
                 }
               }
@@ -4615,10 +4615,10 @@ package TestCase {
     my $value7 = (short)0x7FFF;
     
     if ($value3 == (long)255) {
-      if ((int)$value4 == (int)(byte)-1) {
-        if ((int)$value5 == (int)(short)-1) {
-          if ((int)$value6 == (int)(byte)127) {
-            if ((int)$value7 == (int)(short)32767) {
+      if ($value4 == -1) {
+        if ($value5 == -1) {
+          if ($value6 == 127) {
+            if ($value7 == 32767) {
               return 1;
             }
           }
@@ -4696,10 +4696,10 @@ package TestCase {
     my $value7 = (short)077777;
     
     if ($value3 == (long)255) {
-      if ((int)$value4 == (int)(byte)-1) {
-        if ((int)$value5 == (int)(short)-1) {
-          if ((int)$value6 == (int)(byte)127) {
-            if ((int)$value7 == (int)(short)32767) {
+      if ($value4 == -1) {
+        if ($value5 == -1) {
+          if ($value6 == 127) {
+            if ($value7 == 32767) {
               return 1;
             }
           }
@@ -4728,10 +4728,10 @@ package TestCase {
     my $value7 = (short)0b111111111111111;
     
     if ($value3 == (long)255) {
-      if ((int)$value4 == (int)(byte)-1) {
-        if ((int)$value5 == (int)(short)-1) {
-          if ((int)$value6 == (int)(byte)127) {
-            if ((int)$value7 == (int)(short)32767) {
+      if ($value4 == -1) {
+        if ($value5 == -1) {
+          if ($value6 == 127) {
+            if ($value7 == 32767) {
               return 1;
             }
           }
